--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SECRET_KEY=nidh
 MONGO_URL=mongodb+srv://nidh:nidh@notesapp.k3y7d.mongodb.net/?retryWrites=true&w=majority&appName=notesapp
+PORT=8000
